nav update and live url added

--- a/src/index.html
+++ b/src/index.html
@@ -25,13 +25,13 @@
     <i class="fa-solid fa-bars" ></i>
   </div>
 <ul id="nav-items" class="nav-items">
-    <li class="list-none"><a class="no-underline" href="#about">About</a></li>
-       <li class="list-none"><a class="no-underline" href="#skills">Skills</a></li>
-    <li class="list-none"><a class="no-underline" href="#services">Services</a></li>
-       <li class="list-none"><a class="no-underline" href="#resume">Resume</a></li>
-     <li class="list-none"><a class="no-underline" href="#portfolio">Portfolio</a></li>
-    <li class="list-none"><a class="no-underline" href="#contact">Contact</a></li>
-<li class="list-none"><a class="no-underline" href="#faq">FAQ</a></li>
+    <li class="list-none"><a class="no-underline hover:text-primary" href="#about">About</a></li>
+       <li class="list-none"><a class="no-underline hover:text-primary" href="#skills">Skills</a></li>
+    <li class="list-none"><a class="no-underline hover:text-primary" href="#services">Services</a></li>
+       <li class="list-none"><a class="no-underline hover:text-primary" href="#resume">Resume</a></li>
+     <li class="list-none"><a class="no-underline hover:text-primary" href="#portfolio">Portfolio</a></li>
+    <li class="list-none"><a class="no-underline hover:text-primary" href="#contact">Contact</a></li>
+<li class="list-none"><a class="no-underline hover:text-primary" href="#faq">FAQ</a></li>
 
   </ul>
 </nav>
@@ -164,7 +164,7 @@ Includes authentication, routing, database operations, and API performance optim
                         <h4 class="education-title">Bachelor's Degree</h4>
                         <h5 class="py-2 text-lg">Hemnagar Degree College / 2021 - Running</h5>
                         <h5 class="text-lg">Hemnagar, Gopalpur, Tangail</h5>
-                        <div class="py-6"><hr class="border-gray-300" /></div>
+                <div class="py-6"><hr class="border-gray-300" /></div>
                     </div>
                     <div>
                         <h4 class="education-title">HSC Passed</h4>
