--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
 <a href=""><img class="logo shadow" src="./images/WhatsApp Image 2025-07-29 at 12.19.01 AM.jpeg" alt="logo-photo"></a>
 <h4 class="text-xl md:text-2xl font-bold">MD. Sagar Ali</h4>
 </div>
-<nav class="navbar md:pt-4">
+<nav class="navbar">
      <div class="navbar-menu md:hidden mt-5" onclick="hamburgertogler()">
     <i class="fa-solid fa-bars" ></i>
   </div>
